--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,9 @@
 # Copy from .env.local on the Vercel dashboard
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+POSTGRES_URL="postgres://<your Postgres username>:<your DB password>@127.0.0.1:5432/<nombre de la base de datos>"
+POSTGRES_URL_NON_POOLING="postgres://<your Postgres username>:<your DB password>@127.0.0.1:5432/<nombre de la base de datos>"
+POSTGRES_USER="<your Postgres username>"
+POSTGRES_HOST="127.0.0.1"
+POSTGRES_PASSWORD="<your DB password, leave as an empty double quoted string if none>"
+POSTGRES_DATABASE="<nombre de la base de datos>"
 
-# `openssl rand -base64 32`
-AUTH_SECRET=
-AUTH_URL=http://localhost:3000/api/auth
